--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </header>
 
   <main id="tips-container">
-    <!-- Tips will be injected here -->
+    <!-- Tips will be loaded here -->
   </main>
 
   <footer>
