--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Daily Betting Tips - Sahidoona</title>
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Google AdSense Auto Ads -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1835470952853856"
+    crossorigin="anonymous"></script>
+
   <style>
     body {
       font-family: sans-serif;
@@ -32,28 +38,6 @@
     .tip h3 {
       margin-top: 0;
     }
-    .vip-section {
-      background: #fff7e6;
-      padding: 20px;
-      margin: 20px;
-      border: 1px solid #ffc107;
-      border-radius: 10px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.05);
-      text-align: center;
-    }
-    .vip-section h2 {
-      color: #d35400;
-    }
-    .vip-btn {
-      display: inline-block;
-      margin-top: 10px;
-      padding: 12px 20px;
-      background: #ff6f00;
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 30px;
-    }
     footer {
       text-align: center;
       padding: 10px;
@@ -68,13 +52,9 @@
     <p>100% Original Daily Predictions</p>
   </header>
 
-  <main id="tips-container"></main>
-
-  <section class="vip-section">
-    <h2>🔥 Get VIP Tips</h2>
-    <p>Want our most accurate, high-stake predictions? Join our VIP group and receive daily premium tips directly!</p>
-    <a href="https://wa.me/254706654969" class="vip-btn">Join on WhatsApp</a>
-  </section>
+  <main id="tips-container">
+    <!-- Tips will be loaded here -->
+  </main>
 
   <footer>
     <p>&copy; 2025 Sahidoona. All rights reserved.</p>
