--- a/index.html
+++ b/index.html
@@ -1,128 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sahidoona Football Tips</title>
-  <meta name="description" content="Free football tips and expert predictions. Join Sahidoona VIP WhatsApp group today.">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap">
+  <title>Sahidoona Today’s Tips – 20 July 2025</title>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: 'Nunito', sans-serif;
-      background: #f5f5f5;
-      margin: 0;
-      padding: 0;
-      color: #222;
-    }
-    header {
-      background: #2c3e50;
-      color: white;
-      padding: 30px 15px;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 28px;
-    }
-    header p {
-      margin: 8px 0 0;
-      font-size: 16px;
-    }
-    .container {
-      max-width: 700px;
-      margin: 30px auto;
-      padding: 20px;
-    }
-    .card {
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      padding: 20px;
-      margin-bottom: 20px;
-    }
-    .card h3 {
-      margin-top: 0;
-      color: #2980b9;
-    }
-    .card p {
-      margin: 6px 0;
-    }
-    footer {
-      text-align: center;
-      padding: 20px;
-      background: #ecf0f1;
-      font-size: 13px;
-      color: #777;
-    }
-    .whatsapp-float {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      z-index: 99;
-    }
-    .whatsapp-float a {
-      background: #25D366;
-      color: white;
-      padding: 12px 20px;
-      text-decoration: none;
-      font-size: 14px;
-      border-radius: 30px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    }
+    body { font-family: 'Nunito', sans-serif; margin:0; padding:0; background:#f5f5f5; color:#222; }
+    header { background:#2c3e50; color:white; padding:30px 15px; text-align:center; }
+    .container { max-width:700px; margin:30px auto; padding:20px; }
+    .card { background:white; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.1); padding:20px; margin-bottom:20px; }
+    .card h3 { margin:0 0 10px; color:#2980b9; }
+    .card p { margin:6px 0; }
+    .vip-btn { display:block; width:200px; margin:20px auto; background:#25D366; color:white; text-align:center; padding:12px; border-radius:30px; text-decoration:none; }
+    footer { text-align:center; padding:20px; background:#ecf0f1; font-size:13px; color:#777; }
   </style>
 </head>
 <body>
+  <header>
+    <h1>🔔 Sahidoona Tips – 20 July 2025</h1>
+    <p>Expert football predictions for today</p>
+  </header>
 
-<header>
-  <h1>⚽ Sahidoona Tips</h1>
-  <p>Daily Free & VIP Football Predictions</p>
-</header>
+  <div class="container">
+    <div class="card">
+      <h3>🔹 Silkeborg or Draw vs Brøndby</h3>
+      <p><strong>Bet of the Day (Double Chance)</strong></p>
+      <p>Reason: Brøndby lost key scorers and look shaky to start. Silkeborg fresh and ready.</p>
+    </div>
+    <div class="card">
+      <h3>🔸 Mjällby to Win & Under 3.5 Goals vs AIK Stockholm</h3>
+      <p><strong>Special of the Day</strong></p>
+      <p>Reason: Mjällby strong at home; AIK have poor away form.</p>
+    </div>
+    <div class="card">
+      <h3>🔥 Gnistan to Win vs SJK (Finland)</h3>
+      <p><strong>Longshot Masterclass</strong></p>
+      <p>Reason: SJK may be tired after midweek match; Gnistan are fresh.</p>
+    </div>
 
-<div class="container" id="tips-container">
-  <!-- Predictions will load here -->
-</div>
+    <a href="https://wa.me/254706654969?text=I%27d%20like%20VIP%20tips%20for%2020%20July%202025" class="vip-btn" target="_blank">
+      💬 Join WhatsApp VIP
+    </a>
+  </div>
 
-<div class="whatsapp-float">
-  <a href="https://wa.me/254706654969?text=Hi%20Sahidoona%2C%20I'm%20interested%20in%20VIP%20betting%20tips!" target="_blank">
-    💬 Join WhatsApp VIP
-  </a>
-</div>
-
-<footer>
-  &copy; 2025 Sahidoona. All rights reserved.
-</footer>
-
-<script>
-  const tips = [
-    {
-      match: "Liverpool vs Man City",
-      prediction: "Both Teams To Score",
-      reason: "Both teams have scored in 8 of their last 9 encounters."
-    },
-    {
-      match: "PSG vs Lyon",
-      prediction: "Over 2.5 Goals",
-      reason: "Both sides average high goals per match."
-    },
-    {
-      match: "Juventus vs Napoli",
-      prediction: "1X Double Chance",
-      reason: "Juventus unbeaten in last 5 home games."
-    }
-  ];
-
-  const container = document.getElementById('tips-container');
-  tips.forEach(tip => {
-    const div = document.createElement('div');
-    div.className = 'card';
-    div.innerHTML = `
-      <h3>${tip.match}</h3>
-      <p><strong>Prediction:</strong> ${tip.prediction}</p>
-      <p><em>${tip.reason}</em></p>
-    `;
-    container.appendChild(div);
-  });
-</script>
-
+  <footer>
+    &copy; 2025 Sahidoona | All rights reserved.
+  </footer>
 </body>
 </html>
