--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sahidoona Today’s Tips – 20 July 2025</title>
+  <title>Sahidoona Tips – Today's Predictions</title>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Nunito', sans-serif; margin:0; padding:0; background:#f5f5f5; color:#222; }
@@ -14,38 +14,61 @@
     .card p { margin:6px 0; }
     .vip-btn { display:block; width:200px; margin:20px auto; background:#25D366; color:white; text-align:center; padding:12px; border-radius:30px; text-decoration:none; }
     footer { text-align:center; padding:20px; background:#ecf0f1; font-size:13px; color:#777; }
+    .ad-container { text-align:center; margin:20px 0; }
   </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1835470952853856" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header>
-    <h1>🔔 Sahidoona Tips – 20 July 2025</h1>
-    <p>Expert football predictions for today</p>
-  </header>
 
-  <div class="container">
-    <div class="card">
-      <h3>🔹 Silkeborg or Draw vs Brøndby</h3>
-      <p><strong>Bet of the Day (Double Chance)</strong></p>
-      <p>Reason: Brøndby lost key scorers and look shaky to start. Silkeborg fresh and ready.</p>
-    </div>
-    <div class="card">
-      <h3>🔸 Mjällby to Win & Under 3.5 Goals vs AIK Stockholm</h3>
-      <p><strong>Special of the Day</strong></p>
-      <p>Reason: Mjällby strong at home; AIK have poor away form.</p>
-    </div>
-    <div class="card">
-      <h3>🔥 Gnistan to Win vs SJK (Finland)</h3>
-      <p><strong>Longshot Masterclass</strong></p>
-      <p>Reason: SJK may be tired after midweek match; Gnistan are fresh.</p>
-    </div>
+<header>
+  <h1>🔔 Sahidoona Tips – Today</h1>
+  <p>Five expert football predictions</p>
+</header>
 
-    <a href="https://wa.me/254706654969?text=I%27d%20like%20VIP%20tips%20for%2020%20July%202025" class="vip-btn" target="_blank">
-      💬 Join WhatsApp VIP
-    </a>
+<div class="container">
+  <div class="card">
+    <h3>1. Silkeborg or Draw vs Brøndby (Double Chance)</h3>
+    <p>Reason: Brøndby missing key scorers; Silkeborg strong start to the season.</p>
   </div>
 
-  <footer>
-    &copy; 2025 Sahidoona | All rights reserved.
-  </footer>
+  <div class="card">
+    <h3>2. Mjällby to Win & Under 3.5 Goals vs AIK Stockholm</h3>
+    <p>Reason: Mjällby solid at home; AIK struggle on their travels.</p>
+  </div>
+
+  <div class="card">
+    <h3>3. Gnistan to Win vs SJK (Finland)</h3>
+    <p>Reason: SJK fatigued; Gnistan well-rested and ready.</p>
+  </div>
+
+  <div class="card">
+    <h3>4. Eintracht Braunschweig vs Dynamo Dresden – BTTS ✔️</h3>
+    <p>Reason: Both teams average goals in over 75% of matches.</p>
+  </div>
+
+  <div class="card">
+    <h3>5. PEC Zwolle vs Almere City – Under 2.5 Goals</h3>
+    <p>Reason: Low-scoring defensive records from both sides this season.</p>
+  </div>
+
+  <div class="ad-container">
+    <ins class="adsbygoogle"
+         style="display:block; width:100%; height:100px;"
+         data-ad-client="ca-pub-1835470952853856"
+         data-ad-slot="3694175687"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+  </div>
+
+  <a href="https://wa.me/254706654969?text=Hi%20Sahidoona%2C%20I'd%20like%20VIP%20tips!" class="vip-btn" target="_blank">
+    💬 Join WhatsApp VIP
+  </a>
+</div>
+
+<footer>
+  &copy; 2025 Sahidoona | All rights reserved.
+</footer>
+
 </body>
 </html>
