--- a/index.html
+++ b/index.html
@@ -1,74 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sahidoona Tips – Today's Predictions</title>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body { font-family: 'Nunito', sans-serif; margin:0; padding:0; background:#f5f5f5; color:#222; }
-    header { background:#2c3e50; color:white; padding:30px 15px; text-align:center; }
-    .container { max-width:700px; margin:30px auto; padding:20px; }
-    .card { background:white; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.1); padding:20px; margin-bottom:20px; }
-    .card h3 { margin:0 0 10px; color:#2980b9; }
-    .card p { margin:6px 0; }
-    .vip-btn { display:block; width:200px; margin:20px auto; background:#25D366; color:white; text-align:center; padding:12px; border-radius:30px; text-decoration:none; }
-    footer { text-align:center; padding:20px; background:#ecf0f1; font-size:13px; color:#777; }
-    .ad-container { text-align:center; margin:20px 0; }
-  </style>
+  <title>⚽ Sahidoona Daily Football Tips</title>
+  <meta name="description" content="100% Original football predictions daily. Join VIP group via WhatsApp.">
+  <meta name="keywords" content="football, betting tips, sahidoona, daily predictions">
+  <meta name="google-adsense-account" content="ca-pub-1835470952853856" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1835470952853856" crossorigin="anonymous"></script>
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      background-color: #121212;
+      color: #eee;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: #1f1f1f;
+      padding: 20px;
+      text-align: center;
+      border-bottom: 2px solid #00ff99;
+    }
+    header h1 {
+      margin: 0;
+      color: #00ff99;
+    }
+    .container {
+      padding: 20px;
+    }
+    .tip {
+      background: #1e1e1e;
+      padding: 15px;
+      border-radius: 10px;
+      margin-bottom: 20px;
+      box-shadow: 0 0 10px rgba(0,255,153,0.1);
+    }
+    .tip h3 {
+      margin: 0 0 10px;
+    }
+    .floating-btn {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      z-index: 99;
+    }
+    .floating-btn a {
+      background-color: #25D366;
+      color: white;
+      padding: 12px 18px;
+      border-radius: 30px;
+      text-decoration: none;
+      font-size: 14px;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: #181818;
+      font-size: 13px;
+      color: #aaa;
+    }
+  </style>
 </head>
 <body>
 
-<header>
-  <h1>🔔 Sahidoona Tips – Today</h1>
-  <p>Five expert football predictions</p>
-</header>
+  <header>
+    <h1>🔥 Sahidoona Tips - Today</h1>
+    <p>Free & VIP Football Predictions</p>
+  </header>
 
-<div class="container">
-  <div class="card">
-    <h3>1. Silkeborg or Draw vs Brøndby (Double Chance)</h3>
-    <p>Reason: Brøndby missing key scorers; Silkeborg strong start to the season.</p>
+  <div class="container" id="tips-container">
+    <!-- Tips inserted by JS -->
   </div>
 
-  <div class="card">
-    <h3>2. Mjällby to Win & Under 3.5 Goals vs AIK Stockholm</h3>
-    <p>Reason: Mjällby solid at home; AIK struggle on their travels.</p>
+  <div class="floating-btn">
+    <a href="https://wa.me/254706654969?text=I'm%20interested%20in%20VIP%20betting%20tips" target="_blank">Join WhatsApp 💬</a>
   </div>
 
-  <div class="card">
-    <h3>3. Gnistan to Win vs SJK (Finland)</h3>
-    <p>Reason: SJK fatigued; Gnistan well-rested and ready.</p>
-  </div>
+  <footer>
+    <p>&copy; 2025 Sahidoona | All Rights Reserved</p>
+    <div id="fc-44706"></div>
+    <script>
+      var fcr = Math.floor(Math.random() * 99999999999);
+      var _fcc = _fcc || [];
+      _fcc.push(["44706"]);
+      _fcc.push(["green"]);
+      (function(){
+        var fc = document.createElement("script");
+        fc.async = true;
+        fc.src = "https://www.imcounter.com/fcount.php?rnd=" + fcr;
+        var sc = document.getElementById("fc-44706");
+        sc.appendChild(fc);
+      })();
+    </script>
+    <noscript>
+      <a href="https://www.imcounter.com/stats/44706/dashboard" target="_blank" title="Visitor Counter">
+        <img src="https://www.imcounter.com/fcounter.php?id=44706;" alt="Visitor Counter" />
+      </a>
+    </noscript>
+  </footer>
 
-  <div class="card">
-    <h3>4. Eintracht Braunschweig vs Dynamo Dresden – BTTS ✔️</h3>
-    <p>Reason: Both teams average goals in over 75% of matches.</p>
-  </div>
+  <script>
+    const tips = [
+      {
+        match: "Real Madrid vs Sevilla",
+        prediction: "1X",
+        reason: "Madrid unbeaten at home. Sevilla away form is weak."
+      },
+      {
+        match: "Liverpool vs Man City",
+        prediction: "Over 2.5",
+        reason: "High-scoring teams with attacking styles."
+      },
+      {
+        match: "Chelsea vs Arsenal",
+        prediction: "BTTS",
+        reason: "Both teams have strong offensive players."
+      }
+    ];
 
-  <div class="card">
-    <h3>5. PEC Zwolle vs Almere City – Under 2.5 Goals</h3>
-    <p>Reason: Low-scoring defensive records from both sides this season.</p>
-  </div>
+    const container = document.getElementById('tips-container');
 
-  <div class="ad-container">
-    <ins class="adsbygoogle"
-         style="display:block; width:100%; height:100px;"
-         data-ad-client="ca-pub-1835470952853856"
-         data-ad-slot="3694175687"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-  </div>
-
-  <a href="https://wa.me/254706654969?text=Hi%20Sahidoona%2C%20I'd%20like%20VIP%20tips!" class="vip-btn" target="_blank">
-    💬 Join WhatsApp VIP
-  </a>
-</div>
-
-<footer>
-  &copy; 2025 Sahidoona | All rights reserved.
-</footer>
+    tips.forEach(tip => {
+      const div = document.createElement('div');
+      div.className = 'tip';
+      div.innerHTML = `
+        <h3>${tip.match}</h3>
+        <p><strong>Prediction:</strong> ${tip.prediction}</p>
+        <p><em>Reason:</em> ${tip.reason}</p>
+      `;
+      container.appendChild(div);
+    });
+  </script>
 
 </body>
 </html>
